Update and rename config_sample.env to config.env

--- a/config.env
+++ b/config.env
@@ -1,22 +1,19 @@
-# Remove this line before deploying
-_____REMOVE_THIS_LINE_____=True
-# REQUIRED CONFIG
-BOT_TOKEN = ""                              # Require restart after changing it while bot running
-OWNER_ID = ""                               # Require restart after changing it while bot running
-TELEGRAM_API = ""                           # Require restart after changing it while bot running
-TELEGRAM_HASH = ""                          # Require restart after changing it while bot running
+BOT_TOKEN = "5832145244:AAHZoRZlp92aduq34ixVWbLY-tCaf62R02s"                              # Require restart after changing it while bot running
+OWNER_ID = "924824750"                               # Require restart after changing it while bot running
+TELEGRAM_API = "3893394"                           # Require restart after changing it while bot running
+TELEGRAM_HASH = "aa7007ccee59163168341aad76d49dd4"                          # Require restart after changing it while bot running
 # OPTIONAL CONFIG
-GDRIVE_ID = ""
-IS_TEAM_DRIVE = ""
+GDRIVE_ID = "1joks5HaNJxXCgyv3EFAy-D4k8hoMMWmA"
+IS_TEAM_DRIVE = "True"
 DOWNLOAD_DIR = "/usr/src/app/downloads/"    # Require restart after changing it while bot running
-DOWNLOAD_STATUS_UPDATE_INTERVAL = "10"
-AUTO_DELETE_MESSAGE_DURATION = "30"
+DOWNLOAD_STATUS_UPDATE_INTERVAL = "5"
+AUTO_DELETE_MESSAGE_DURATION = "-1"
 DATABASE_URL = ""                           # Require restart after changing it while bot running
 AUTHORIZED_CHATS = ""                       # Require restart after changing it while bot running
 SUDO_USERS = ""                             # Require restart after changing it while bot running
 IGNORE_PENDING_REQUESTS = ""
-USE_SERVICE_ACCOUNTS = ""
-INDEX_URL = ""
+USE_SERVICE_ACCOUNTS = "True"
+INDEX_URL = "https://punya.bentang.workers.dev/0:/BOT"
 STATUS_LIMIT = ""
 STOP_DUPLICATE = ""
 CMD_SUFFIX = ""                              # Require restart after changing it while bot running
